--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint src/",
-    "start": "nodemon ./src/bin/www"
+    "start": "nodemon ./src/bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "config": "^3.3.1",
@@ -25,9 +26,13 @@
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.17.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "faker": "^4.1.0",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "supertest": "^4.0.2"
   }
 }
