update docker stuff for tests

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,25 +8,20 @@ EXPOSE 3030
 
 # Set the node_env variable and node_modules in path
 ENV NODE_ENV=development
-ENV PATH=/opt/node_modules/.bin:/usr/local/bin:$PATH
-
+ENV PATH=/opt/app/node_modules/.bin:/usr/local/bin:$PATH
 # If you want more debugging information
 ENV DEBUG=server:*
 
 # Set the current working directory
-WORKDIR /opt
+WORKDIR /opt/app
 
 # Copy package.json and package-lock.json
 COPY package*.json ./
+COPY knexfile.js ./
+COPY docker-entrypoint.sh ./
 
 # Install dependencies
 RUN npm install
-
-# Set the working directory where we mount our src code
-WORKDIR /opt/app
-
-COPY knexfile.js ./
-COPY docker-entrypoint.sh ./
 
 ENTRYPOINT ["./docker-entrypoint.sh"]
 
