--- a/.github/workflows/server-lint.yml
+++ b/.github/workflows/server-lint.yml
@@ -24,13 +24,13 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        working-directory: ./server
+        working-directory: server
         run: npm install
 
-      - name: Run linters
-        uses: samuelmeuli/lint-action@v1
-        working-directory: ./server
-        with:
-          github_token: ${{ secrets.github_token }}
-          # Enable linters
-          eslint: true
+      #- name: Run linters
+        #uses: samuelmeuli/lint-action@v1
+        #working-directory: server
+        #with:
+          #github_token: ${{ secrets.github_token }}
+          ## Enable linters
+          #eslint: true
