--- a/.github/workflows/server-lint.yml
+++ b/.github/workflows/server-lint.yml
@@ -27,10 +27,10 @@ jobs:
         working-directory: server
         run: npm install
 
-      #- name: Run linters
-        #uses: samuelmeuli/lint-action@v1
-        #working-directory: server
-        #with:
-          #github_token: ${{ secrets.github_token }}
-          ## Enable linters
-          #eslint: true
+      - name: Run linters
+        uses: samuelmeuli/lint-action@v1
+        working-directory: server
+        with:
+          github_token: ${{ secrets.github_token }}
+          # Enable linters
+          eslint: true
