--- a/.github/workflows/server-lint.yml
+++ b/.github/workflows/server-lint.yml
@@ -9,7 +9,7 @@ on:
       - "server/*"
 
 jobs:
-  run-linters:
+  Lint Server:
     name: Run linters
     runs-on: ubuntu-latest
 
@@ -22,15 +22,10 @@ jobs:
         with:
           node-version: 12
 
-      # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
         working-directory: server
         run: npm install
 
       - name: Run linters
-        uses: samuelmeuli/lint-action@v1
         working-directory: server
-        with:
-          github_token: ${{ secrets.github_token }}
-          # Enable linters
-          eslint: true
+        run: npm lint
