--- a/.github/workflows/server-lint.yml
+++ b/.github/workflows/server-lint.yml
@@ -9,8 +9,8 @@ on:
       - "server/*"
 
 jobs:
-  Lint Server:
-    name: Run linters
+  run-lint:
+    name: Lint Server Code
     runs-on: ubuntu-latest
 
     steps:
