--- a/.github/workflows/server-lint.yml
+++ b/.github/workflows/server-lint.yml
@@ -1,4 +1,4 @@
-name: Server Lint
+name: Server CI
 
 on:
   pull_request:
@@ -31,6 +31,7 @@ jobs:
         run: npm run lint
   run-tests:
     name: Run tests
+    runs-on: ubuntu-latest
 
     steps:
       - name: Check out Git repository
