--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -40,7 +40,7 @@ jobs:
         image: postgres:12.2-alpine
         ports:
           - 5432:5432
-        environment:
+        env:
           - POSTGRES_USER=postgres
           - POSTGRES_PASSWORD=password
           - POSTGRES_DB=perfectfit-db
