--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
-          POSTGRES_DB: perfectfit-db
+          POSTGRES_DB: perfectfit-test-db
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
