--- a/server/package.json
+++ b/server/package.json
@@ -3,20 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint src/",
-    "start": "nodemon ./src/bin/www"
+    "lint": "eslint src/ database/ __tests__/",
+    "start": "nodemon ./src/bin/www",
+    "test": "NODE_ENV=test jest --runInBand --forceExit",
+    "test:watch": "NODE_ENV=test jest --runInBand --watchAll"
   },
   "dependencies": {
     "config": "^3.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-validator": "^6.6.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "knex": "^0.21.1",
+    "knex-db-manager": "^0.6.1",
     "morgan": "~1.9.1",
     "objection": "^2.2.0",
     "pg": "^8.2.1",
+    "pg-escape": "^0.2.0",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
@@ -25,9 +30,13 @@
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.17.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "faker": "^4.1.0",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "supertest": "^4.0.2"
   }
 }
